--- a/pom.xml
+++ b/pom.xml
@@ -47,27 +47,17 @@
         </configuration>
       </plugin>
       <plugin>
-      <groupId>com.cosium.code</groupId>
-      <artifactId>git-code-format-maven-plugin</artifactId>
-      <version>${git-code-format-maven-plugin.version}</version>
-      <executions>
-        <!-- On commit, format the modified java files -->
-        <execution>
-          <id>install-formatter-hook</id>
-          <goals>
-            <goal>install-hooks</goal>
-          </goals>
-        </execution>
-        <!-- On Maven verify phase, fail if any file
-        (including unmodified) is badly formatted -->
-        <execution>
-          <id>validate-code-format</id>
-          <goals>
-            <goal>validate-code-format</goal>
-          </goals>
-        </execution>
-      </executions>
-    </plugin>
+        <groupId>com.coveo</groupId>
+        <artifactId>fmt-maven-plugin</artifactId>
+        <version>2.5.0</version>
+        <executions>
+            <execution>
+                <goals>
+                    <goal>format</goal>
+                </goals>
+            </execution>
+        </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
